--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,5 @@
-asgiref==3.11.0
-beautifulsoup4==4.13.4
-certifi==2025.7.14
-cffi==1.17.1
-charset-normalizer==3.4.2
-colorama==0.4.6
-comtypes==1.4.11
-Django==6.0.1
-docopt==0.6.2
-gunicorn==23.0.0
-idna==3.10
-Js2Py==0.74
-MouseInfo==0.1.3
-packaging==25.0
-pipwin==0.5.2
-psutil==7.0.0
-PyAudio==0.2.14
-PyAutoGUI==0.9.54
-pycparser==2.22
-PyGetWindow==0.0.9
-pyjsparser==2.7.1
-PyMsgBox==1.0.9
-pyperclip==1.9.0
-pypiwin32==223
-PyPrind==2.11.3
-PyRect==0.2.0
-PyScreeze==1.0.1
-pySmartDL==1.3.4
-pyttsx3==2.99
-pytweening==1.2.0
-pywin32==311
-requests==2.32.4
-six==1.17.0
-sounddevice==0.5.2
-soupsieve==2.7
-SpeechRecognition==3.14.3
-sqlparse==0.5.5
-srt==3.5.3
-tqdm==4.67.1
-typing_extensions==4.14.1
-tzdata==2025.2
-tzlocal==5.3.1
-urllib3==2.5.0
-vosk==0.3.45
-websockets==15.0.1
+Django>=5.0,<6.1
+gunicorn
+razorpay
+requests
+beautifulsoup4
